--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -22,7 +22,7 @@
 		<script>
 			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 			var datasource = []; //底部列表数据
-			var topStudentArr = [];
+			var topStudentArr = [];//学生资料
 			var topArray = []; //顶部班级列表数据
 			var requestTimes = 0; //记录班级空间请求次数--等于0时，请求完毕，刷新界面
 			var requestTimes2 = 0; //记录群用户列表请求次数--等于0时，请求完毕，刷新界面
