--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -26,14 +26,14 @@
 				background-size: 100%;
 				/*宽度占100%*/
 			}
-			
+
 			.cloud-info {
 				/*顶部信息*/
 				padding: 10px;
 				float: right;
 				margin-right: 10px;
 			}
-			
+
 			#cloud_prsonalimge {
 				/*个人头像*/
 				border-radius: 50%;
@@ -43,19 +43,19 @@
 				float: right;
 				margin-right: 10px;
 			}
-			
+
 			#cloud_name {
 				/*名字*/
 				color: white;
 				margin-bottom: 5px;
 			}
-			
+
 			.cloud-top-icon {
 				/*图标*/
 				width: 20px;
 				height: 20px;
 			}
-			
+
 			#gift,
 			#yuan {
 				/*积分和钱*/
@@ -64,7 +64,7 @@
 				font-weight: 900;
 				margin-left: 5px;
 			}
-			
+
 			.mui-progressbar {
 				/*进度条*/
 				margin-top: 5px;
@@ -72,45 +72,45 @@
 				height: 10px;
 				width: 70%;
 			}
-			
+
 			.cloud-capacity {
 				/*容量*/
 				margin-top: 3px;
 				color: white;
 			}
-			
+
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-			
+
 			.mui-table-view {
 				background: transparent;
 				min-height: 90px;
 			}
-			
+
 			.mui-table-view-cell {
 				background: white;
 			}
-			
+
 			.mui-table-view.mui-grid-view .mui-table-view-cell {
 				margin-right: 0px;
 			}
-			
+
 			.cloud-bottom-imge {
 				/*云存储的文件夹图片*/
 				height: 40px;
 				width: 50px;
 			}
-			
+
 			.cloud-bottom-imge2 {
 				/*云档案，云应用的图片*/
 				height: 50px;
 				width: 50px;
 				/*margin-top: 10px;*/
 			}
-			
+
 			.cloud-bottom-imge2-bg {
 				/*云档案，云应用的图片背景*/
 				height: 50px;
@@ -118,17 +118,17 @@
 				border-radius: 50%;
 				margin: auto;
 			}
-			
+
 			.cloud-bottom-icon {
 				/*云存储右侧按钮*/
 				height: 20px;
 				width: 20px;
 			}
-			
+
 			.cloud-text-align-center {
 				text-align: center;
 			}
-			
+
 			.cloud-line {
 				/*功能名字右侧树竖线*/
 				position: absolute;
@@ -138,7 +138,7 @@
 				background: #D9D9D9;
 				height: 100%;
 			}
-			
+
 			#cloudstorage {
 				background-color: white;
 				padding: 10px;
@@ -147,7 +147,7 @@
 				padding-top: 7px;
 				padding-bottom: 7px;
 			}
-			
+
 			#cloudrecord,
 			#cloudapps {
 				background: white;
@@ -157,11 +157,11 @@
 				padding-top: 10px;
 				padding-bottom: 10px;
 			}
-			
+
 			.mui-progressbar {
 				border-radius: 5px;
 			}
-			
+
 			.iconfont {
 				font-size: 45px;
 			}
@@ -316,6 +316,8 @@
 
 			mui.plusReady(function() {
 				events.preload("../homework/homework-tea.html", 300);
+				events.preload('storage_main.html'); //预加载云存储
+				events.preload('storage_upload.html'); //预加载上传文件选择
 				//初始化滚动条
 				mui('.mui-scroll-wrapper').scroll({
 					indicators: true, //是否显示滚动条
@@ -351,6 +353,17 @@
 				//-----------设置数据end-----------------
 
 				//-----------设置监听start---------------
+
+				//上传按钮
+				window.addEventListener('upload', function() {
+					events.fireToPageWithData('storage_upload.html', 'init', {
+						fid: '0', //文件id,顶层0
+						showTop: false, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
+						title: '云盘—云存储', //标题名
+						top: fileArray //顶层文件和文件夹的数据
+					});
+				});
+
 				//---存储start---
 				//云存储显示的文件
 				mui('#cloudstorage').on('tap', '.cloud-text-align-center', function() {
@@ -364,21 +377,21 @@
 							return false;
 						}
 					});
-					events.openNewWindowWithData('storage_main.html', {
+					events.fireToPageWithData('storage_main.html', 'init', {
 						fid: fid, //文件id
+						showTop: true, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 						title: title, //标题名
 						top: fileArray //顶层文件和文件夹的数据
-
 					});
 				});
 
 				//云存储右侧按钮
 				mui('#cloudstorage').on('tap', '.cloud-bottom-icon', function() {
-					events.openNewWindowWithData('storage_main.html', {
+					events.fireToPageWithData('storage_main.html', 'init', {
 						fid: '0', //文件id,顶层0
+						showTop: true, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 						title: '云盘—云存储', //标题名
 						top: fileArray //顶层文件和文件夹的数据
-
 					});
 				});
 
