--- a/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea-sub.html
@@ -10,6 +10,7 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/homework.css" rel="stylesheet" />
 	</head>
@@ -25,8 +26,8 @@
 	    <div class="mui-content">
 	    	<!--班级选择状态条-->
 	        <div id="tabs-class" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-			    <div id="scroll-class" class="mui-scroll">
-
+			    <div id="scroll-class" class="mui-scroll tabs-classes">
+						
 			    </div>
 			</div>
 			<!--<img id="tempDetail" src="../../image/homework/other.png" />-->
