--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -176,7 +176,7 @@
 				<div class="mui-scroll">
 					<!--顶部-->
 					<div class="cloud-top" style="min-height: 100px">
-						<img id="imge_bg" style="width: 100%;position: absolute;" />
+						<img id="imge_bg" src="../../image/cloud/cloud_bg2.png" style="width: 100%;position: absolute;" />
 						<div class="cloud-info">
 							<!--<div class="mui-row" style="">-->
 							<!--<div class="mui-col-sm-3 mui-col-xs-3">
@@ -206,7 +206,7 @@
 							<!--</div>-->
 						</div>
 					</div>
-					<div id="bottom" style="position: absolute;width: 100%;">
+					<div id="bottom" style="position: absolute;width: 100%;margin-top: 10px;">
 						<!--云存储-->
 						<ul id="cloudstorage" class="mui-table-view mui-grid-view " style="padding-right: 0px;">
 							<li class="mui-table-view-cell mui-media mui-col-sm-1 mui-col-xs-1" style="padding: 0;">
@@ -328,10 +328,12 @@
 					bounce: false, //是否启用回弹
 				});
 				var imge_bg = document.getElementById("imge_bg");
-				imge_bg.src = "../../image/cloud/cloud_bg2.png";
-				imge_bg.onload = function() {
-					document.getElementById("bottom").style.top = imge_bg.height + 'px';
-				};
+				setTimeout(function() {
+					imge_bg.onload = function() {
+						console.log('onload:' + imge_bg.height + 'px');
+						document.getElementById("bottom").style.top = imge_bg.height + 'px';
+					};
+				}, 1000);
 				//-----------设置数据start---------------
 				//设置进度条进度
 				mui('.mui-progressbar').progressbar({
