--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -245,7 +245,7 @@
 			function refreshStuList(){
 				console.log(456)
 				homeworkDetailNodes.segItem1.innerHTML = '已完成(20)';
-				homeworkDetailNodes.segItem2.innerHTML = '已完成(20)';
+				homeworkDetailNodes.segItem2.innerHTML = '未完成(20)';
 				var li = document.createElement('li');
 				li.innerHTML = '<li class="mui-table-view-cell  ">'+
 										'<div class="mui-media-body">'+
