更改我的界面显示顺序

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -26,17 +26,17 @@
 
 			<!--各项-->
 			<ul class="mui-table-view mui-table-view-chevron">
-
-				<li class="mui-table-view-cell" position='0'>
-					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-qunziliao"></span> 群资料
-					</a>
-				</li>
 				<li class="mui-table-view-cell" position='1'>
 					<a class="mui-navigate-right" open-type="common">
 						<span class="mui-icon iconfont icon-group"></span> 群管理
 					</a>
 				</li>
+				<li class="mui-table-view-cell" position='0'>
+					<a class="mui-navigate-right" open-type="common">
+						<span class="mui-icon iconfont icon-qunziliao"></span> 人员资料
+					</a>
+				</li>
+				
 				<li class="mui-table-view-cell" position='2'>
 					<a class="mui-navigate-right" open-type="common">
 						<span class="mui-icon iconfont icon-jiaqun"></span> 申请加入群
