云盘上传选择文件和选择云盘路径界面

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -370,7 +370,7 @@
 					events.fireToPageWithData('storage_upload.html', 'init', {
 						fid: '0', //文件id,顶层0
 						showTop: false, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
-						title: '云盘—云存储', //标题名
+						title: '我的教宝云盘', //标题名
 						top: fileArray //顶层文件和文件夹的数据
 					});
 				});
