群管理，群资料只能看自己创建的群

--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -404,7 +404,7 @@
 						var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
 						//需要参数
 						var getQunData = {
-							vtp: 'ag', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+							vtp: 'cg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
 							vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
 						};
 						// 等待的对话框
