--- a/JiaoBaoYun-hb/html/quan/class_space.html
+++ b/JiaoBaoYun-hb/html/quan/class_space.html
@@ -26,7 +26,7 @@
 		<script src="../../js/publicProtocol.js"></script>
 		<script>
 			/*预加载界面*/
-			mui.init();
+//			mui.init();
 			mui.plusReady(function() {
 					events.preload('class-dynamic.html', 100);
 					events.preload('class-group.html', 120);
