--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -210,7 +210,9 @@
 						events.openNewWindow('app_notes_create.html');
 					});
 
-
+					window.addEventListener('refresh',function () {
+					        pulldownRefresh();
+					});
 				});
 
 				//请求数据
