--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_sub.html
@@ -156,7 +156,7 @@
 				}, 1500);
 			}
 
-			var subData = ''; //记录班级ID
+			var subData = null; //记录班级ID和班级资料
 			var TotalPage = 1; //总页数
 			var TotalCnt = 0; //总记录数
 			var hisData = []; //记录所有的历史数据
@@ -167,6 +167,7 @@
 				//---从父页面获取数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				subData = main.data; //接收页面传入的参数值
+
 				console.log('从父页面获取的数据:' + JSON.stringify(subData));
 				//---从父页面获取数据---end---
 				getClassHistory(1, 10); //从服务器获取10条数据
@@ -193,68 +194,77 @@
 					if(data.RspCode == 0) {
 						//
 						var tempRspData = data.RspData.Data;
-						//获取当前回调留言的个人信息，主要是头像、昵称
-						var tempArray = [];
-						//先遍历回调数组，获取
-						for(var item in tempRspData) {
-							//当前循环的model
-							var tempModel0 = tempRspData[item];
-							//将当前model中id塞到数组
-							tempArray.push(tempModel0.StudentId);
-						}
-						//给数组去重
-						tempArray = arrayDupRemoval(tempArray);
-						//发送获取用户资料申请
-						var tempData = {
-							vvl: tempArray.join() //查询的用户资料ID
-						}
-						console.log('tempData:' + JSON.stringify(tempData));
+						//						//获取当前回调留言的个人信息，主要是头像、昵称
+						//						var tempArray = [];
+						//						//先遍历回调数组，获取
+						//						for(var item in tempRspData) {
+						//							//当前循环的model
+						//							var tempModel0 = tempRspData[item];
+						//							//将当前model中id塞到数组
+						//							tempArray.push(tempModel0.StudentId);
+						//						}
+						//						//给数组去重
+						//						tempArray = arrayDupRemoval(tempArray);
+						//						//发送获取用户资料申请
+						//						var tempData = {
+						//							vvl: tempArray.join() //查询的用户资料ID
+						//						}
+						//						console.log('tempData:' + JSON.stringify(tempData));
+						//
+						//						//22.通过用户资料ID获取用户各项资料
+						//						postDataPro_PostUuinf(tempData, wd, function(data1) {
+						//							wd.close();
+						//							console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+						//							if(data1.RspCode == 0) {
+						//
+						//								//循环当前的个人信息返回值数组
+						//								for(var i in data1.RspData) {
+						//									//当前model
+						//									var tempModel = data1.RspData[i];
+						//									//判断类型是否为3，学生
+						//									if(tempModel.umstype == 3) {
+						//										//更新头像
+						//										tempModel.uimg = updateHeadImg(tempModel.uimg, 1);
+						//										//循环留言数组
+						//										for(var item in tempRspData) {
+						//											//当前循环的model
+						//											var tempModel0 = tempRspData[item];
+						//											//对比id是否一致
+						//											if(tempModel0.StudentId == tempModel.stuid) {
+						//												//合并
+						//												tempModel0 = $.extend(tempModel0, tempModel);
+						//											}
+						//										}
+						//									}
+						//								}
+						//							}
+						//							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
 
-						//22.通过用户资料ID获取用户各项资料
-						postDataPro_PostUuinf(tempData, wd, function(data1) {
-							wd.close();
-							console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
-							if(data1.RspCode == 0) {
-
-								//循环当前的个人信息返回值数组
-								for(var i in data1.RspData) {
-									//当前model
-									var tempModel = data1.RspData[i];
-									//判断类型是否为3，学生
-									if(tempModel.umstype == 3) {
-										//更新头像
-										tempModel.uimg = updateHeadImg(tempModel.uimg, 1);
-										//循环留言数组
-										for(var item in tempRspData) {
-											//当前循环的model
-											var tempModel0 = tempRspData[item];
-											//对比id是否一致
-											if(tempModel0.StudentId == tempModel.stuid) {
-												//合并
-												tempModel0 = $.extend(tempModel0, tempModel);
-											}
-										}
+						mui.each(tempRspData, function(index, item) {
+							console.log('tempRspData：' + index + '|' + JSON.stringify(item));
+							mui.each(subData.mem, function(index, element) {
+								if(item.StudentId == element.stuid) {
+									mui.extend(item, {
+										ugname: element.stuname
+									});
+									hisData.push(item);
+									if(hisData.length == 1) {
+										createNotesItem(item);
 									}
-								}
-							}
-							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
-
-							mui.each(tempRspData, function(index, item) {
-								console.log('tempRspData：' + index + '|' + JSON.stringify(item));
-								hisData.push(item);
-								if(hisData.length == 1) {
 									createNotesItem(item);
+									return false;
 								}
-								createNotesItem(item);
 							});
-							if(tempRspData.length == 0) {
-								if(hisData.length != 0) {
-									mui.toast('没有更多了');
-								} else {
-									mui.toast('获取数据为空');
-								}
-							}
+
 						});
+						if(tempRspData.length == 0) {
+							if(hisData.length != 0) {
+								mui.toast('没有更多了');
+							} else {
+								mui.toast('获取数据为空');
+							}
+						}
+						//						});
 
 					} else {
 						mui.toast(data.RspTxt);
