老师查看某个学生记事记录

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -670,8 +670,8 @@
 					var html2 = '<div class="keep-box-shadow-border keep-member" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" data-stuname="' + member.stuname + '">';
 					//头像
 					var html3 = '';
-					if(member.uimg != null && member.uimg != '') {
-						html3 = '<img src="' + updateHeadImg(member.uimg, 2) + '" />';
+					if(member.stuimg != null && member.stuimg != '') {
+						html3 = '<img src="' + updateHeadImg(member.stuimg, 2) + '" />';
 					} else {
 						html3 = '<img src="../../image/utils/default_personalimage.png" />';
 					}
