--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -17,6 +17,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<!--<script type="text/javascript" src="../../js/mui.picker.min.js"></script>-->
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
 
 		<style>
 			body,
@@ -200,6 +201,7 @@
 				var teaData = null; //记录获取的老师的资料
 				var stuData = []; //记录获取的学生资料
 				var parData = []; //记录获取的学生资料的家长信息
+				var postNum = 0; //记录发送修改协议的次数
 
 				//---学生界面中相关的元素---start---
 				var stu_name = document.getElementById("stu_name"); //学生姓名
@@ -319,17 +321,19 @@
 					} else if(mstype == 3) {
 						//学生
 						var stuName = stu_name.value;
-						if(stuName != data.stuname) { //判断是否修改了学生姓名
-							console.log('更改学生姓名:' + stuName);
-							changeStuName(stuName); //更改学生姓名
-						}
+						//if(stuName != data.stuname) { //判断是否修改了学生姓名
+						console.log('更改学生姓名:' + stuName);
+						changeStuName(stuName); //更改学生姓名
+						//}
+						postNum++;
 						mui.each(parData, function(index, item) {
+							postNum++;
 							console.log('家长信息:' + JSON.stringify(item));
 							var urel = document.getElementById("par_urel_" + item.utid).value;
-							if(urel != item.urel) { //判断是否修改了学生姓名
-								console.log('更改家长关系:' + item.utid + '|' + urel);
-								changeParUrel(item.ustuid, urel); //更新与家长关系
-							}
+							//if(urel != item.urel) { //判断是否修改了学生姓名
+							console.log('更改家长关系:' + item.utid + '|' + urel);
+							changeParUrel(item.ustuid, urel); //更新与家长关系
+							//}
 						});
 					}
 				})
@@ -580,12 +584,18 @@
 						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
-							mui.toast('修改学生姓名成功');
-							console.log('修改学生姓名成功');
+							mui.toast('修改学生姓名：成功！');
+							console.log('修改学生姓名：成功！');
 						} else {
-							mui.toast(data.RspTxt);
+							mui.toast('修改学生姓名：' + data.RspTxt);
+						}
+						postNum--;
+						if(postNum == 0) {
+							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
+							mui.back();
 						}
 					});
+
 				}
 
 				/**
@@ -615,10 +625,15 @@
 						wd.close();
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
-							mui.toast('更新与家长关系成功');
-							console.log('更新与家长关系成功');
+							mui.toast('更新与家长关系:成功!');
+							console.log('更新与家长关系:成功!');
 						} else {
-							mui.toast(data.RspTxt);
+							mui.toast('更新与家长关系:' + data.RspTxt);
+						}
+						postNum--;
+						if(postNum == 0) {
+							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
+							mui.back();
 						}
 					});
 				}
@@ -633,7 +648,7 @@
 						vtp: 'tec', //更新资料类型,stu:学生,tec:老师,gen:家长关系
 						stuid: data.stuid, //资料ID,更新学生老师必填,关系留0
 						stuname: tea_name.value, //资料名称
-						stuimg: data.stuimg, //资料头像,学生必填,其他留0
+						stuimg: '0', //资料头像,学生必填,其他留0
 						job: tea_job.value, //职位,老师必填,其他留空
 						title: tea_title.value, //职称,老师必填,其他留空
 						expsch: tea_expsch.value, //教龄,老师必填,其他留空
@@ -650,6 +665,8 @@
 						if(data.RspCode == 0) {
 							mui.toast('修改老师资料成功');
 							console.log('修改老师资料成功');
+							events.fireToPageNone('/html/mine/qun_data.html', 'refresh');
+							mui.back();
 						} else {
 							mui.toast(data.RspTxt);
 						}
