0003920: 群名字太长时，班级空间显示出错

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -24,7 +24,7 @@
 		<!--标题栏-->
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">发布</h1>
+			<h1 class="mui-title">发布c;bvlbfdfsgfdgfdgdfgdfgdgvdfvhbgfn </h1>
 			<!--发布作业按钮-->
 			<a id="submitBtn" class="mui-pull-right header-publish">提交</a>
 		</header>
